--- a/mysite/templates/usage.html
+++ b/mysite/templates/usage.html
@@ -10,6 +10,5 @@
     </form>
         <br />
         <br />
-    <a class="btn btn-primary" href="{% url 'home' %}">Home</a>
-    <a class="btn btn-primary" href="{% url 'logout' %}">Log Out</a>
+{% include 'menu.html' %}
 {% endblock %}
