--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -6,8 +6,9 @@
 
 
       <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-       <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css">
-      <script src="{% static 'js/bootstrap.min.js' %}"></script>
+      <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css">
+      <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+       <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
    </head>
    <body>
