--- a/mysite/templates/showreservation.html
+++ b/mysite/templates/showreservation.html
@@ -9,7 +9,7 @@
     <th>Purpose</th>
 	<th>Temp. Location</th>
 	<th>Date Taken</th>
-	<th>Date Returned</th>
+	<th>Action</th>
 </tr>
 </thead>
 <tbody>
@@ -21,7 +21,7 @@
     <td>{{ reservation.purpose }}</td>
 	<td>{{ reservation.temp_location }}</td>
 	<td>{{ reservation.date_taken }}</td>
-	<td>{{ reservation.date_returned }}</td>
+	<td><a class="btn btn-default" href="{% url 'equipmentReturn' pk=reservation.pk %}">Return</a></td>
  </tr>
 {% endfor %}
 </tbody>
