--- a/mysite/templates/menu.html
+++ b/mysite/templates/menu.html
@@ -1,4 +1,7 @@
 <a class="btn btn-primary" href="{% url 'my_equipments' %}">Equipments List</a>
 <a class="btn btn-primary" href="{% url 'my_usage' %}">Make Reservation</a>
 <a class="btn btn-primary" href="{% url 'reservedequipment' %}">My Reserved Equipments</a>
+{%if request.user.is_superuser %}
+<a class="btn btn-primary" href="{% url 'calculation' %}">Calculation</a>
+{% endif %}
 <a class="btn btn-primary" href="{% url 'logout' %}">Log Out</a>
