--- a/mysite/templates/calculation.html
+++ b/mysite/templates/calculation.html
@@ -5,7 +5,7 @@
 <tr>
     <th>Equipment Name</th>
     <th>Price </th>
-    <th>Total Time</th>
+    <th>Total Time [H : Min]</th>
 
 </tr>
 </thead>
