--- a/mysite/templates/equipments.html
+++ b/mysite/templates/equipments.html
@@ -25,7 +25,7 @@
         {% if equipment.status == 1 %}
         <a  class="btn btn-primary" href="{% url 'booking_calender' pk=equipment.pk %}">Make Reservation</a>
         {% else %}
-        <a  class="btn btn-primary" href="" readonly>Reserved</a>
+        <button class="btn btn-primary">Reserved</button>
         {% endif %}
     </td>
  </tr>
