--- a/mysite/templates/reservations.html
+++ b/mysite/templates/reservations.html
@@ -20,8 +20,8 @@
     <td>{{ reservation.taken_by }}</td>
     <td>{{ reservation.purpose }}</td>
 	<td>{{ reservation.temp_location }}</td>
-	<td>{{ reservation.date_taken }}</td>
-	<td>{{ reservation.date_returned }}</td>
+	<td>{{ reservation.start }}</td>
+	<td>{{ reservation.end }}</td>
  </tr>
 {% endfor %}
 </tbody>
