--- a/mysite/templates/calculation.html
+++ b/mysite/templates/calculation.html
@@ -13,7 +13,7 @@
 
 <tr>
     <td>{{ cal.first.equipment }}</td>
-    <td></td>
+    <td>{{ cal.first.equipment.price }}</td>
     <td>{{ totaltime }}</td>
 
  </tr>
