--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -6,13 +6,16 @@
       <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css">
       <link href="{% static 'css/fullcalendar.css' %}" rel="stylesheet">
+      <link href="{% static 'css/bootstrap-datetimepicker.css' %}" rel="stylesheet">
       <link href="{% static 'css/custom.css' %}" rel="stylesheet">
-      <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
+
+      <script src="{% static 'js/bootstrap.min.js' %}"></script>
       <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
       <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
       <script src="{% static 'js/moment.min.js' %}"></script>
       <script src="{% static 'js/fullcalendar.js' %}"></script>
+      <script src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
    </head>
    <body>
       <div class="container">
